updated intro headings

--- a/html5up-dopetrope/index.html
+++ b/html5up-dopetrope/index.html
@@ -26,9 +26,9 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="no-sidebar.html">Bio</a></li>
 								<li><a href="left-sidebar.html">CV</a></li>
+								<li><a href="left-sidebar.html">Favorites</a></li>
 								<li><a href="right-sidebar.html">Portfolio</a></li>
 								<li><a href="left-sidebar.html">Musings</a></li>
-								<li><a href="no-sidebar.html">Contact</a></li>
 							</ul>
 						</nav>
 
@@ -45,40 +45,33 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<i class="icon featured fa-cog"></i>
+										<a href="index.html"><i class="icon featured fa-user-circle"></i></a>
 										<header>
-											<h2>Ipsum consequat</h2>
+											<h2>Bio</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>Here you will find everything you did and didn't want to know about me.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
-										<i class="icon featured alt fa-flash"></i>
+										<a href="index.html"><i class="icon featured alt fa-graduation-cap"></i></a>
 										<header>
-											<h2>Magna etiam dolor</h2>
+											<h2>CV</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>Here you will find the strictly professional version of me.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="last">
-										<i class="icon featured alt2 fa-star"></i>
+										<a href="index.html"><i class="icon featured alt2 fa-thumbs-up"></i></a>
 										<header>
-											<h2>Tempus adipiscing</h2>
+											<h2>Favorites</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>Here you will find a free-wheeling list of my favorite things.</p>
 									</section>
 								</div>
 							</div>
-							<footer>
-								<ul class="actions">
-									<li><a href="#" class="button large">Get Started</a></li>
-									<li><a href="#" class="button alt large">Learn More</a></li>
-								</ul>
-							</footer>
 						</section>
-
 				</section>
 
 			<!-- Main -->
