--- a/html5up-dopetrope/index.html
+++ b/html5up-dopetrope/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/styles.css" />
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -24,7 +25,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="no-sidebar.html">Bio</a></li>
+								<li><a href="bio.html">Bio</a></li>
 								<li><a href="left-sidebar.html">CV</a></li>
 								<li><a href="left-sidebar.html">Favorites</a></li>
 								<li><a href="right-sidebar.html">Portfolio</a></li>
@@ -85,8 +86,8 @@
 										<header class="major">
 											<h2>My Portfolio</h2>
 										</header>
-										<div class="row">
-											<div class="col-4 col-6-medium col-12-small">
+										<div class="row mg-row">
+											<div class="col-4 col-4-medium col-12-small col-flex">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/sprint.jpg" alt="great-idea" /></a>
 													<header>
@@ -100,7 +101,7 @@
 													</footer>
 												</section>
 											</div>
-											<div class="col-4 col-6-medium col-12-small">
+											<div class="col-4 col-4-medium col-12-small col-flex">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/greatidea.jpg" alt="" /></a>
 													<header>
@@ -114,7 +115,7 @@
 													</footer>
 												</section>
 											</div>
-											<div class="col-4 col-6-medium col-12-small">
+											<div class="col-4 col-4-medium col-12-small col-flex">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 													<header>
@@ -140,7 +141,7 @@
 											<h2>Various Musings</h2>
 										</header>
 										<div class="row">
-											<div class="col-6 col-12-small">
+											<div class="col-6 col-12-small col-flex">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 													<header>
@@ -156,7 +157,7 @@
 													</footer>
 												</section>
 											</div>
-											<div class="col-6 col-12-small">
+											<div class="col-6 col-12-small col-flex">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 													<header>
