--- a/html5up-dopetrope/no-sidebar.html
+++ b/html5up-dopetrope/no-sidebar.html
@@ -57,7 +57,7 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/stephen-cook-369317-unsplash.jpg" alt="" /></a>
 								<header>
 									<h2>No Sidebar</h2>
 									<p>Lorem ipsum dolor sit amet feugiat</p>
