--- a/html5up-dopetrope/index.html
+++ b/html5up-dopetrope/index.html
@@ -140,7 +140,7 @@
 										<header class="major">
 											<h2>Various Musings</h2>
 										</header>
-										<div class="row">
+										<div class="row mg-row">
 											<div class="col-6 col-12-small col-flex">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
@@ -162,7 +162,6 @@
 													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 													<header>
 														<h3>Mind the Gap: The United States must up its Investment in Workforce Development</h3>
-														<br>
 														<p>Posted June 4, 2019</p>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
